// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input.html - {"bogus":null} format 1`] = `
====================================options=====================================
bogus: null
parsers: ["html", "angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;

exports[`input.html - {"htmlVoidTags":true} format 1`] = `
====================================options=====================================
htmlVoidTags: true
parsers: ["html"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text">

================================================================================
`;

exports[`input.html - {"htmlVoidTags":true} format 2`] = `
====================================options=====================================
htmlVoidTags: true
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<input type='text'>

=====================================output=====================================
<input type="text" />

================================================================================
`;
